--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@wxcc-desktop/sdk": "^1.2.10",
     "babel-loader": "^8.2.5",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "ttl-mem-cache": "^4.1.0",
     "webpack": "^5.72.1",
